5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4345/executions/1832_1647.log
== TEST (2019-06-13 18:08:44) 
-- CODE:
from numpy import*
f=array(eval(iunput("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento  >=70
	ap=ap+1
	print(ap)
-- ERROR:
File "XXXX", line 5
    if elemento  >=70
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:08:53) 
-- CODE:
from numpy import*
f=array(eval(iunput("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70
	ap=ap+1
	print(ap)
-- ERROR:
File "XXXX", line 5
    if elemento  >=70
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:08:58) 
-- CODE:
from numpy import*
f=array(eval(iunput("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70
	ap=ap+1
	print(ap)
-- EXECUTION TIME:
0.618461
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 5
    if elemento  >=70
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:09:09) 
-- CODE:
from numpy import*
f=array(eval(iunput("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	ap=ap+1
	print(ap)
-- ERROR:
File "XXXX", line 6
    ap=ap+1
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:09:16) 
-- CODE:
from numpy import*
f=array(eval(iunput("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	 ap=ap+1
	print(ap)
-- ERROR:
File "XXXX", line 6
    ap=ap+1
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:09:23) 
-- CODE:
from numpy import*
f=array(eval(iunput("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	if elemento  >=70:
	ap=ap+1
	print(ap)
-- ERROR:
File "XXXX", line 6
    ap=ap+1
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:09:39) 
-- CODE:
from numpy import*
f=array(eval(iunput("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	ap=ap+1
	print(ap)
-- ERROR:
File "XXXX", line 6
    ap=ap+1
          ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:10:11) 
-- CODE:
from numpy import*
f=array(eval(iunput("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	ap= ap+1
	print(ap)
-- ERROR:
File "XXXX", line 6
    ap= ap+1
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:10:15) 
-- CODE:
from numpy import*
f=array(eval(iunput("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	ap= ap+1
	print(ap)
-- ERROR:
File "XXXX", line 6
    ap= ap+1
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:12:05) 
-- CODE:
from numpy import*
f=array(eval(iunput("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:12:17) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:16:02) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- EXECUTION TIME:
1.10368
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
1
2
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
1
2
3
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:16:03) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:16:14) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:16:22) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- EXECUTION TIME:
0.88761
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
1
2
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
1
2
3
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:16:29) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:20:28) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- EXECUTION TIME:
0.944668
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
1
2
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
1
2
3
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:21:15) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:21:37) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:21:43) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- EXECUTION TIME:
0.884827
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
1
2
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
1
2
3
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:21:50) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:21:59) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- EXECUTION TIME:
0.924939
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
1
2
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
1
2
3
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:22:13) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:31:38) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
			
-- EXECUTION TIME:
0.9772
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
1
2
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
1
2
3
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:34:07) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:40:13) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
			for w in x:
				y=0
				if[x[y]]>=70:
					y=y+1
					m=zeros(y,dtype(int))
					print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:40:32) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
			for w in ap:
				y=0
				if[x[y]]>=70:
					y=y+1
					m=zeros(y,dtype(int))
					print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:38) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
			for w in ap:
				y=0
				if[x[y]]>=70:
					y=y+1
					m=zeros(y,dtype(int))
					print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:50) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
			for w in ap:
				y=0
				if[x[y]]>=70:
					y=y+1
					m=zeros(y,dtype(int))
					print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:41:54) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
			for w in ap:
				y=0
				if[x[y]]>=70:
					y=y+1
					m=zeros(y,dtype(int))
					print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:42:07) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
			for w in ap:
				y=0
				if[x[y]]>=70:
					y=y+1
					m=zeros(y,dtype(int))
					print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:42:32) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
					y=y+1
					m=zeros(y,dtype(int))
					print(m)
-- EXECUTION TIME:
0.700206
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:43:19) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
					y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.768441
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:43:19) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
					y=y+1
m=zeros(y,dtype(int))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:43:35) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
					y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.881963
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:43:47) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
					y=y+1
m=zeros(y,dtype(int))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:44:00) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:44:14) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.826434
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:44:15) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
			print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:44:28) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
			ap=ap+1
print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.890554
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:44:37) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
		ap=ap+1
print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
1.17331
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 6
    ap=ap+1
          ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:44:37) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
		ap=ap+1
print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
1.30603
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 6
    ap=ap+1
          ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:44:38) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	ap=ap+1
print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
1.33344
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 6
    ap=ap+1
          ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:44:42) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	 ap=ap+1
print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- ERROR:
File "XXXX", line 6
    ap=ap+1
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:44:44) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	 ap=ap+1
print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
1.29703
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 6
    ap=ap+1
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:44:44) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	 ap=ap+1
print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.797056
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 6
    ap=ap+1
     ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:44:50) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:44:52) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.844868
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:45:00) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
1.37954
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:45:01) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
1.54125
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:45:01) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in ap:
	y=0
	if[x[y]]>=70:
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
2.67332
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:45:20) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in ap:
	y=0
	if([x[y]]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.987949
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:45:21) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in ap:
	y=0
	if([x[y]]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
2.07817
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:45:30) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in ap:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:45:33) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in ap:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.989884
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:45:43) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in ap:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:45:50) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in ap:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.812977
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 8, in <module>
    for w in ap:
TypeError: 'int' object is not iterable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:46:22) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in ap:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:46:44) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.677149
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 10, in <module>
    if(x[y]>=70):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:46:46) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
1.52405
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 10, in <module>
    if(x[y]>=70):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:46:47) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(x[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:47:02) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:47:04) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.717321
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 10, in <module>
    if(ap[y]>=70):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:48:02) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
		ap=ap+1
m=zeros(y,dtype(int))
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:10) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
		ap=ap+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.847234
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 10, in <module>
    if(ap[y]>=70):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:38) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
		y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.793941
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 10, in <module>
    if(ap[y]>=70):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:42) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
	y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
0.791435
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 11
    y=y+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:46) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
	y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
1.50391
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 11
    y=y+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:47) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
	y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
1.99552
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1832/1647/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:47) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
	y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
2.36068
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 11
    y=y+1
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:56) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
	   y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
1.40494
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 10, in <module>
    if(ap[y]>=70):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:57) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
	   y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
2.18732
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 10, in <module>
    if(ap[y]>=70):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:57) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
	   y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
2.86503
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 10, in <module>
    if(ap[y]>=70):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:48:57) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for elemento in f:
	 if elemento  >=70:
	   ap=ap+1
print(ap)
for w in f:
	y=0
	if(ap[y]>=70):
	   y=y+1
m=zeros(y,dtype(int))
print(m)
-- EXECUTION TIME:
3.67659
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 10, in <module>
    if(ap[y]>=70):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:51:43) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for element in f:
	if elemento >=70:
		ap=ap+1
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:51:59) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for element in f:
	if elemento >=70:
		ap=ap+1
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:52:56) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for element in f:
	if elemento >=70:
		ap=ap+1
		print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:53:11) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for element in f:
	if element >=70:
		ap=ap+1
		print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:53:30) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:00:58) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for element in f:
n=zeros(y, dtype=int)
	if element >=70:
		ap=ap+1
print(ap)

-- ERROR:
File "XXXX", line 5
    n=zeros(y, dtype=int)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:01:09) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:01:32) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)

-- EXECUTION TIME:
0.845915
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:01:37) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:01:44) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
-- EXECUTION TIME:
0.813806
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:02:54) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:03:17) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
-- EXECUTION TIME:
0.833744
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:03:49) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:03:56) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
-- EXECUTION TIME:
0.873037
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:04:10) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:05:21) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
forw in f:
	if w>=70:
		y=y+1
		n+zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
0.590002
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 9
    forw in f:
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:05:22) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
forw in f:
	if w>=70:
		y=y+1
		n+zeros(y, dtype=int)
print(n)
-- ERROR:
File "XXXX", line 9
    forw in f:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:05:24) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
forw in f:
	if w>=70:
		y=y+1
		n+zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
0.724301
-- ERROR:
  File "/home/codebench/codes/1832/1647/main.py", line 9
    forw in f:
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:05:39) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
for w in f:
	if w>=70:
		y=y+1
		n+zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
0.949254
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 12, in <module>
    n+zeros(y, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:05:41) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
for w in f:
	if w>=70:
		y=y+1
		n+zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:06:02) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
for w in f:
	if w>=70:
		y=y+1
		n+zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
0.966095
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 12, in <module>
    n+zeros(y, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:06:12) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n+zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:06:13) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n+zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
0.843755
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 12, in <module>
    n+zeros(y, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:06:14) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n+zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
1.52677
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 12, in <module>
    n+zeros(y, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:06:16) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n+zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:06:18) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n+zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
0.805848
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1832/1647/main.py", line 12, in <module>
    n+zeros(y, dtype=int)
NameError: name 'n' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:06:31) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:06:32) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
0.990485
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
digite a frequencia dos alunos: 1
[0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:06:42) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
for w in f:
	if w >=70:
		y=y+1
		n=zeros(y, dtype=int)
print(n)
-- EXECUTION TIME:
0.930993
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[0 0 0]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 0 0 0]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:13:50) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
		n=1
print(n)			
-- EXECUTION TIME:
0.958379
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:14:31) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
		n=1
print(y)			
-- EXECUTION TIME:
0.742647
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
0
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
0
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 19:14:35) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
		n=1
print(n)			
-- EXECUTION TIME:
0.75774
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 19:15:21) 
-- CODE:
from numpy import*
f=array(eval(input("digite a frequencia dos alunos: ")))
ap=0
y=0
for element in f:
	if element >=70:
		ap=ap+1
print(ap)
n=zeros(y, dtype=int)
for i in range(size(f)):
	if i >=70:
		y=y+1
		n=1
print(n)			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
